--- a/Views/Race/Index.cshtml
+++ b/Views/Race/Index.cshtml
@@ -18,8 +18,10 @@
                             <p class="card-text">@item.Title</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                    <a type="btn btn-success" asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id"
+                                class="btn btn-sm btn-outline-secondary">View</a>
+                                   <a type="btn btn-success" asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id"
+                                class="btn btn-sm btn-outline-secondary">Edit</a>
                                 </div>
                                 <small class="text-muted">9 mins</small>
                             </div>
