--- a/Views/Club/Index.cshtml
+++ b/Views/Club/Index.cshtml
@@ -24,6 +24,8 @@
                                 class="btn btn-sm btn-outline-secondary">View</a>
                                    <a type="btn btn-success" asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id"
                                 class="btn btn-sm btn-outline-secondary">Edit</a>
+                                    <a type="btn btn-success" asp-controller="Club" asp-action="Delete" asp-route-id="@item.Id"
+                                   class="btn btn-sm btn-outline-secondary">Delete</a>
                                 </div>
                                 <small class="text-muted">9 mins</small>
                             </div>
